--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,13 +2,13 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: static/img
-public_folder: /img
+media_folder: static/images
+public_folder: /images
 
 collections:
   - name: 'blog'
     label: 'Blog'
-    folder: 'content/blog'
+    folder: 'src/content/blog'
     create: true
     slug: 'index'
     media_folder: ''
