--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby-plugin-layout": "^1.10.0",
     "gatsby-plugin-netlify-cms": "^4.10.0",
+    "gatsby-transformer-remark": "^2.16.0",
     "netlify-cms-app": "^2.14.23",
     "react": "17.0.1",
     "react-dom": "17.0.1",
