--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,5 +19,6 @@ collections:
     fields:
       - { label: 'Build Name', name: 'name', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Header Image', name: 'image', widget: 'image'}
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
