--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: static/images/uploads
+media_folder: /static/images/uploads
 public_folder: /images/uploads
 publish_mode: editorial_workflow
 
