fix path for new posts

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,8 +14,8 @@ collections:
     label: 'Build'
     folder: 'src/content/build'
     create: true
-    slug: 'index'
-    path: '{{name}}/index'
+    slug: '{{name}}'
+    path: '{{name}}'
     media_folder: /static/images/uploads
     public_folder: /images/uploads
     preview_path: 'build/{{name}}'
@@ -32,7 +32,7 @@ collections:
     label: 'FAQ'
     folder: 'src/content/faq'
     create: false
-    slug: 'index'
+    slug: '{{title}}'
     path: '{{title}}/index'
     media_folder: /static/images/uploads
     public_folder: /images/uploads
