--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -43,3 +43,31 @@ collections:
       - { label: 'Last Updated', name: 'date', widget: 'datetime' }
       - { label: 'Header Image', name: 'image', widget: 'image'}
       - { label: 'Body', name: 'body', widget: 'markdown' }
+  - name: 'services'
+    label: 'Services'
+    folder: 'src/content/services'
+    create: false
+    slug: '{{title}}'
+    path: '{{title}}/index'
+    media_folder: /static/images/uploads
+    public_folder: /images/uploads
+    preview_path: '{{title}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Last Updated', name: 'date', widget: 'datetime' }
+      - { label: 'Header Image', name: 'image', widget: 'image'}
+      - { label: 'Body', name: 'body', widget: 'markdown' }
+  - name: 'testimonial'
+    label: 'Testimonial'
+    folder: 'src/content/testimonial'
+    create: true
+    slug: '{{title}}'
+    path: '{{title}}'
+    media_folder: /static/images/uploads
+    public_folder: /images/uploads
+    preview_path: 'testimonials/{{title}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Author', name: 'author', widget: 'string' }
+      - { label: 'Date', name: 'date', widget: 'datetime' }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
