--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gatsby-transformer-sharp": "2.7.0",
     "husky": "4.3.0",
     "lint-staged": "10.5.1",
+    "netlify-cms-proxy-server": "^1.3.24",
     "postcss": "^8.1.9",
     "prettier": "2.2.0",
     "tailwindcss": "^2.0.1",
@@ -57,6 +58,7 @@
     "lint": "eslint . --ext ts,tsx",
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "netlify": "netlify-cms-proxy-server",
     "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
