--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -80,6 +80,12 @@ collections:
           - { label: 'Photo', name: 'photo', widget: 'image' }
           - { label: 'Shell Price', name: 'shell_price', widget: 'number' }
           - { label: 'Upfit Price', name: 'upfit_price', widget: 'number' }
+          - label: Features
+            name: features
+            widget: list
+            fields:
+            - { label: Name, name: name, widget: string }
+            - { label: Description, name: description, widget: string }
           - label: Options
             name: options
             widget: list
