--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-netlify-cms": "^4.10.0",
     "gatsby-remark-images": "^4.0.0",
     "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-transformer-json": "4",
     "gatsby-transformer-remark": "^2.16.0",
     "netlify-cms-app": "^2.14.23",
     "react": "17.0.1",
