--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -116,6 +116,12 @@ collections:
             fields:
             - { label: Name, name: name, widget: string }
             - { label: Description, name: description, widget: string }
+          - label: Specifications
+            name: specs
+            widget: list
+            fields:
+            - { label: Name, name: name, widget: string }
+            - { label: Value, name: value, widget: string }
           - label: Options
             name: options
             widget: list
