--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-netlify-cms": "^4.10.0",
     "gatsby-remark-images": "^4.0.0",
     "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-transformer-json": "4",
     "gatsby-transformer-remark": "^2.16.0",
     "netlify-cms-app": "^2.14.23",
     "react": "17.0.1",
@@ -46,9 +47,10 @@
     "gatsby-transformer-sharp": "2.7.0",
     "husky": "4.3.0",
     "lint-staged": "10.5.1",
+    "netlify-cms-proxy-server": "^1.3.24",
     "postcss": "^8.1.9",
     "prettier": "2.2.0",
-    "tailwindcss": "^2.0.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.1.2"
   },
   "license": "MIT",
@@ -57,6 +59,7 @@
     "lint": "eslint . --ext ts,tsx",
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "netlify": "netlify-cms-proxy-server",
     "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
